--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="sign_up">sign up</string>
     <string name="forgot">forgot?</string>
 
+    <string name="settings">Settings</string>
+    <string name="log_out">Log out</string>
+    
     <string name="dashboard">Dashboard</string>
     <string name="single_player">Single Player</string>
     <string name="cooperative">Cooperative</string>
