Changes in layout Signup_Step1 e 2 e Edit_profile

--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -4,8 +4,11 @@
     
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="or">or</string>
-    <string name="email">e-mail</string>
-    <string name="password">password</string>
+    <string name="name">Name</string>
+    <string name="email">E-mail</string>
+    <string name="password">Password</string>
+    <string name="birthday">Birthday</string>
+    <string name="address">Address</string>
     <string name="log_in">log in</string>
     <string name="sign_up">sign up</string>
     <string name="forgot">forgot?</string>
@@ -21,6 +24,7 @@
     
     <string name="profile">Profile</string>
     
+    <string name="next">Next</string>
     <string name="submit">Submit</string>
     
 </resources>
