--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -4,11 +4,11 @@
     
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="or">or</string>
-    <string name="email">e-mail</string>
-    <string name="password">password</string>
-    <string name="log_in">log in</string>
-    <string name="sign_up">sign up</string>
-    <string name="forgot">forgot?</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="log_in">Sign in</string>
+    <string name="sign_up">Sign up with email</string>
+    <string name="forgot">Forgot your password?</string>
 
     <string name="settings">Settings</string>
     <string name="log_out">Log out</string>
