Created Forgot password layout

--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -27,6 +27,7 @@
     
     <string name="next">Next</string>
     <string name="submit">Submit</string>
+    <string name="send">Send</string>
     
     <string name="step1">Step 1</string>
     <string name="step2">Step 2</string>
