--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
 
     <string name="app_name">PromGame Mobile</string>
-    
+    <string name="slogan">
+        <![CDATA[
+            <b>Discover</b> and <b>win</b> promotions
+        ]]>
+    </string>    
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="or">or</string>
 
