--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="name">Name</string>
     <string name="birthday">Birthday</string>
     <string name="address">Address</string>
-
+    <string name="empty_fields">Please filln in all fields</string>
+    
     <string name="settings">Settings</string>
     <string name="log_out">Log out</string>
     
