--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -12,12 +12,13 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="log_in">Sign in</string>
-    <string name="sign_up">Sign up with email</string>
+    <string name="sign_up">Sign up</string>
+    <string name="sign_up_with_email">Sign up with email</string>
     <string name="forgot">Forgot your password?</string>
     <string name="name">Name</string>
     <string name="birthday">Birthday</string>
     <string name="address">Address</string>
-    <string name="empty_fields">Please filln in all fields</string>
+    <string name="empty_fields">Please fill in all fields</string>
     
     <string name="settings">Settings</string>
     <string name="log_out">Log out</string>
