--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -28,9 +28,9 @@
     <string name="cooperative">Cooperative</string>
     <string name="competitive">Competitive</string>
     <string name="trading">Trading</string>
-    
+     <string name="promotions">Promotions</string>
     <string name="profile">Profile</string>
-    
+    <string name="promotion">Promotion</string>
     <string name="next">Next</string>
     <string name="submit">Submit</string>
     <string name="reset">Reset your password!</string>
@@ -38,4 +38,5 @@
     <string name="step1">Step 1</string>
     <string name="step2">Step 2</string>
     
+    <string name="test">test</string>
 </resources>
