--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="password_old">Password Old</string>
     <string name="log_in">Sign in</string>
     <string name="sign_up">Sign up</string>
     <string name="sign_up_with_email">Sign up with email</string>
@@ -40,4 +41,8 @@
     
     <string name="prom_sample">Promotion X</string>
     <string name="test">test</string>
+    
+    <string name="edit">Editar</string>
+    
+    
 </resources>
