Little improvements to the UI

--- a/android/PromGameMobile/res/values/strings.xml
+++ b/android/PromGameMobile/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="prom_sample">Promotion X</string>
     <string name="test">test</string>
     <string name="edit">Editar</string>
+    <string name="badges">Badges</string>
 
 </resources>
