Improved UI of PromotionActivity

--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="test">test</string>
     <string name="edit">Editar</string>
     <string name="badges">Badges</string>
+    <string name="play">Play</string>
 
 </resources>
