--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="promotions">Promotions</string>
     <string name="profile">Profile</string>
     <string name="promotion">Promotion</string>
+    <string name="end_date">End Date:</string>
+    <string name="win_points">Win Points:</string>
     <string name="my_promotions">My Promotions</string>
     <string name="next">Next</string>
     <string name="submit">Submit</string>
