--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="play">Play</string>
     <string name="propose">Propose Trade</string>
     <string name="send_proposal">Send proposal</string>
+    <string name="tags">Tags</string>
 
 
 </resources>
