Added badges activity and popup. Still data hardcoded, waiting for API. Fixed small bugs. WinIt only works in portrait mode, since it has a huge bug, I can explain to anyone interested

--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="tags">Tags</string>
     <string name="dialog_propose_trade">Do you want to propose this trade?</string>
     <string name="cancel">Cancel</string>
+    <string name="unlocked">Unlocked: </string>
+    <string name="share">Share</string>
 
 
 </resources>
