Crated trading popup

--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -48,6 +48,10 @@
     <string name="send_proposal">Send proposal</string>
     <string name="tags">Tags</string>
     <string name="dialog_propose_trade">Do you want to propose this trade?</string>
+    <string name="dialog_recive_trade">wants to trade a promotion with you</string>
+    <string name="accept">Accept</string>
+    <string name="refuse">Refuse</string>
+    <string name="you">You</string>
     <string name="cancel">Cancel</string>
     <string name="unlocked">Unlocked: </string>
     <string name="share">Share</string>
