MyPromotions almost done

--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -55,6 +55,6 @@
     <string name="cancel">Cancel</string>
     <string name="unlocked">Unlocked: </string>
     <string name="share">Share</string>
-
+	<string name="my_promotions">My Promotions</string>
 
 </resources>
