Show MyPromotions done, still missing action when you click in some promotion presented on the lists showed

--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -58,5 +58,6 @@
 	<string name="my_promotions">My Promotions</string>
     <string name="sticky_item">Sticky</string>
     <string name="quick_return_item">Quick Return</string>
+    <string name="page">Page</string>
 
 </resources>
