--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -31,8 +31,8 @@
     <string name="promotions">Promotions</string>
     <string name="profile">Profile</string>
     <string name="promotion">Promotion</string>
-    <string name="end_date">End Date:</string>
-    <string name="win_points">Win Points:</string>
+    <string name="end_date">End Date</string>
+    <string name="win_points">Win Points</string>
     <string name="my_promotions">My Promotions</string>
     <string name="next">Next</string>
     <string name="submit">Submit</string>
@@ -44,7 +44,7 @@
     <string name="edit">Edit</string>
     <string name="badges">Badges</string>
     <string name="play">Play</string>
-    <string name="propose">Propose Trade</string>
+    <string name="propose_trade">Propose Trade</string>
     <string name="send_proposal">Send proposal</string>
     <string name="tags">Tags</string>
     <string name="dialog_propose_trade">Do you want to propose this trade?</string>
@@ -59,5 +59,9 @@
     <string name="sticky_item">Sticky</string>
     <string name="quick_return_item">Quick Return</string>
     <string name="page">Page</string>
+    <string name="cancel">Cancel</string>
+    <string name="redeem">Redeem</string>
+    <string name="trade">Trade</string>
+    <string name="show">Show</string>
 
 </resources>
