--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="redeem">Redeem</string>
     <string name="trade">Trade</string>
     <string name="show">Show</string>
+    <string name="app_id">104075696465886</string>
 
 </resources>
