--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -67,6 +67,9 @@
 
     <string name="you_won">You won!</string>
     <string name="you_lost">You lost!</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading&#8230;</string>
+    
+    <string name="outgoing">Outgoing</string>
+    <string name="incoming">Incoming</string>
     
 </resources>
