--- a/android/WinIt/res/values/strings.xml
+++ b/android/WinIt/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="you_will_lose_the_opportunity_to_trade_your_promotion">You\'ll lose the opportunity to trade your promotion.</string>
     
     <string name="no_proposals">No proposals</string>
+    <string name="no_internet_connection">No Internet connection</string>
 </resources>
